--- a/test/css/base1/base.css
+++ b/test/css/base1/base.css
@@ -2,25 +2,13 @@
     margin: 10px;
     width: 100px;
     height: 30px;
-    background: url("../../image/1.png?__spriter") repeat-x 0 0;
-    background-size: auto 40px;
+    background: url("../../image/shop.png?__spriter") 0 0;
     border: 3px solid black;
 }
-
 .image2 {
     margin: 10px;
     width: 50px;
-    background: url("../../image/bag.png?__spriter") repeat-x 0 0;
-    background-size: 50px auto;
+    background: url("../../image/bag.png?__spriter") 0 0;
     height: 50px;
-    border: 3px solid black;
-}
-
-.image3 {
-    margin: 10px;
-    width: 44px;
-    background: url("../../image/shop.png?__spriter") 0 0;
-    background-size: 44px auto;
-    height: 44px;
     border: 3px solid black;
 }
