--- a/test/css/base1/base.css
+++ b/test/css/base1/base.css
@@ -2,12 +2,15 @@
     margin: 10px;
     width: 44px;
     height: 44px;
+    background-size: 100px auto;
     background: url("../../image/shop.png?__spriter") 0 0;
     border: 3px solid black;
 }
+
 .image2 {
     width: 50px;
     background: url("../../image/bag.png?__spriter") 0 0;
+    background-size: 100px auto;
     height: 50px;
     border: 3px solid black;
 }
