--- a/test/css/base1/base.css
+++ b/test/css/base1/base.css
@@ -1,16 +1,13 @@
 .image1 {
-    margin: 10px;
     width: 44px;
     height: 44px;
-    background-size: 100px auto;
-    background: url("../../image/shop.png?__spriter") 0 0;
+    background: red url("../../image/shop.png?__spriter") center center no-repeat;
     border: 3px solid black;
 }
 
 .image2 {
     width: 50px;
-    background: url("../../image/bag.png?__spriter") 0 0;
-    background-size: 100px auto;
     height: 50px;
+    background: url("../../image/bag.png?__spriter");
     border: 3px solid black;
 }
