--- a/test/css/base1/base.css
+++ b/test/css/base1/base.css
@@ -1,13 +1,14 @@
 .image1 {
     width: 44px;
     height: 44px;
+    background-size: 100px auto;
     background: red url("../../image/shop.png?__spriter") center center no-repeat;
     border: 3px solid black;
 }
 
-.image2 {
-    width: 50px;
-    height: 50px;
-    background: url("../../image/bag.png?__spriter");
-    border: 3px solid black;
-}
+/*.image2 {*/
+/*width: 50px;*/
+/*height: 50px;*/
+/*background: url("../../image/bag.png?__spriter");*/
+/*border: 3px solid black;*/
+/*}*/
