--- a/test/css/base1/base.css
+++ b/test/css/base1/base.css
@@ -6,9 +6,16 @@
     border: 3px solid black;
 }
 
-/*.image2 {*/
-/*width: 50px;*/
-/*height: 50px;*/
-/*background: url("../../image/bag.png?__spriter");*/
-/*border: 3px solid black;*/
-/*}*/
+.image2 {
+    width: 60px;
+    height: 80px;
+    background: url("../../image/8.gif?__spriter");
+    border: 3px solid black;
+}
+
+.image2 {
+    width: 70px;
+    height: 80px;
+    background: url("../../image/9.jpg?__spriter");
+    border: 3px solid black;
+}
